--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     implementation 'androidx.paging:paging-runtime-ktx:3.1.0'
     implementation "androidx.navigation:navigation-compose:2.4.0-beta01"
     implementation "com.google.accompanist:accompanist-flowlayout:0.24.2-alpha"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-rc01"
 
     def nav_version = "2.4.1"
     implementation "androidx.navigation:navigation-compose:$nav_version"
